# aqaoa

./: Cargo.toml  Dockerfile  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.txt  install.sh  pyproject.toml  t.py
aqaoa/: Cargo.toml  README.md  build.rs
aqaoa/internal/: .gitignore  Makefile  compile_flags.txt
aqaoa/internal/include/aqaoa/: aqaoa.hpp  brute_force.hpp  functions.hpp  handle.hpp  optimize.hpp
aqaoa/internal/include/kernel/: kernels.hpp
aqaoa/internal/include/wrapper/: aqaoa.hpp  brute_force.hpp  core.hpp  device_info.hpp  handle.hpp  optimize.hpp
aqaoa/internal/src/aqaoa/: aqaoa.cu  brute_force.cu  functions.cu  optimize.cpp
aqaoa/internal/src/kernel/: kernels.cu  reduce.cu
aqaoa/internal/src/wrapper/: aqaoa.cpp  brute_force.cpp  core.cpp  device_info.cpp  handle.cpp  optimize.cpp
aqaoa/src/: core.rs  lib.rs  parameters.rs  prelude.rs  py_bindings.rs  random.rs
aqaoa/src/algorithms/: aoa.rs  aqaoa.rs  bf.rs  cubf.rs  mod.rs
aqaoa/src/bindings/: core.rs  mod.rs  polynomial.rs
aqaoa/src/bindings/aqaoa/: brute_force.rs  device_info.rs  expval.rs  gradients.rs  handle.rs  mod.rs  optimize.rs  sample.rs  statevector.rs
licenses/: bitvec-1.0.1_bitvecto-rs_bitvec.txt  custatevec-latest_unknown_repo.txt  liblbfgs-1.10_conda-forge_liblbfgs-feedstock.txt  miniforge-latest_conda-forge_miniforge.txt  numpy-0.23.0_PyO3_rust-numpy.txt  numpy-1.26.4_numpy_numpy.txt  pyo3-0.23.5_pyo3_pyo3.txt  rand-0.6.5_rust-random_rand.txt  rand-0.8.5_rust-random_rand.txt  rayon-1.10.0_rayon-rs_rayon.txt  uv-latest_astral-sh_uv.txt
src/: aqaoa.rs  brute_force.rs  core.rs  handle.rs  lib.rs  pymodule.rs  utils.rs
src/pyaqaoa/: __init__.pyi  aqaoa.pyi
tools/: fetch_licenses.py
