[package]
name = "pyaqaoa"
version = "0.1.1"
description = "AqAOA is a derivative of CUAOA (Apache-2.0): A Novel CUDA-Accelerated Simulation Framework for the QAOA for Python"
keywords = ["Quantum Computing", "Quantum Optimization", "QAOA", "Quantum Circuit Simulation"]
authors = ["Jonas Blenninger <jonas.blenninger@aqarios.com>"]
repository = "https://github.com/aqarios/aqaoa"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[package.metadata]
original_project = "https://github.com/jflxb/cuaoa"
original_project_dois = ["https://arxiv.org/abs/2407.13012", "https://doi.org/10.5281/zenodo.12750207"]

[dependencies]
bitvec = "1.0.1"
numpy = "0.24.0"
rand = "0.8.5"
rayon = "1.9.0"

[dependencies.pyo3]
version = "0.24.1"
features = [ "num-complex", "extension-module", "auto-initialize" ]

[dependencies.aqaoa]
path = "./aqaoa"
features = ["py"]
