[package]
name = "aqaoa"
version = "0.1.1"
build = "build.rs"
description = "AqAOA is a derivative of CUAOA (Apache-2.0): A Novel CUDA-Accelerated Simulation Framework for the QAOA for Python"
keywords = ["Quantum Computing", "Quantum Optimization", "QAOA", "Quantum Circuit Simulation"]
authors = ["Jonas Blenninger <jonas.blenninger@aqarios.com>"]
repository = "https://github.com/aqarios/aqaoa"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[package.metadata]
original_project = "https://github.com/jflxb/cuaoa"
original_project_dois = ["https://arxiv.org/abs/2407.13012", "https://doi.org/10.5281/zenodo.12750207"]

[lib]
crate-type = [ "rlib", "cdylib",]

[build-dependencies]
cc = "1.0.83"

[dependencies]
bitvec = "1.0.1"
cffi = "0.1.7"
ffi = "0.1.1"
libc = "0.2.153"
num = "0.4.1"
rand = "0.8.5"

[dependencies.pyo3]
version = "0.24.1"
features = [ "num-complex", "extension-module", "auto-initialize",]
optional = true

[dependencies.numpy]
version = "0.24.0"
optional = true

[features]
py = ["pyo3", "numpy"]
